# blehware-darwin

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
blehware-injector/: CMakeLists.txt
blehware-injector/include/: utilities.hpp
blehware-injector/source/: main.cpp  utilities.cpp
blehware-module/: CMakeLists.txt
blehware-module/include/: globals.hpp  macos.hpp  offsets.hpp  pipe.hpp  roblox.hpp  utilities.hpp
blehware-module/source/: globals.cpp  macos.cpp  main.cpp  roblox.cpp  utilities.cpp
blehware-terminal/: CMakeLists.txt
blehware-terminal/source/: main.cpp  pipe.cpp
dependencies/submodules/: CMakeLists.txt
